sync api implemented

--- a/src/main/resources/akka.conf
+++ b/src/main/resources/akka.conf
@@ -8,6 +8,14 @@ akka {
 
   actor {
 
+    sync-executions-dispatcher {
+      executor = "thread-pool-executor"
+      thread-pool-executor {
+        fixed-pool-size = 100
+      }
+      throughput = 1
+    }
+
     deployment {
       /async-executor/loaders {
         router = round-robin-pool
