--- a/src/main/resources/api.conf
+++ b/src/main/resources/api.conf
@@ -6,6 +6,11 @@ api {
   }
 
   crawler {
+
+    http-client {
+      loadTimeoutInMillis = 10000
+    }
+
     async.executions {
       cache {
         max-capacity = 100
