--- a/src/main/resources/akka.conf
+++ b/src/main/resources/akka.conf
@@ -1,7 +1,7 @@
 akka {
 
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
+  loglevel = "INFO"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   log-dead-letters = 10
   log-dead-letters-during-shutdown = on
