api.conf: comments

--- a/src/main/resources/api.conf
+++ b/src/main/resources/api.conf
@@ -4,12 +4,17 @@ api {
   crawler {
 
     http-client {
+      // таймаут загрузки страницы с информацией о компании (в миллисекундах)
       loadTimeoutInMillis = 10000
     }
 
     async.executions {
+      // параметры LRU-кэша хранимых результатов
+      // асинхронного исполнителя запросов
       cache {
+        // максимальная вместимость кэша
         max-capacity = 100
+        // максимальное время жизни записи в кэше
         lifetime = "10 minutes"
       }
     }
